# Sinba

./: CMakeLists.txt  README.md
src/: db_encode.cpp  db_encode.h  pir_client.cpp  pir_client.h  pir_server.cpp  pir_server.h  pir_test.cpp  seal_bench_comparison.cpp  utils.h
